@startuml

Bag <|-- Audience: bag
Invitation <|-- Bag: invitation
Ticket <|-- Bag: ticket
Ticket <|-- TicketOffice: tickets
TicketOffice <|-- TicketSeller: ticketOffice

class Audience {
    + getBag()
}

class Bag {
    + hasInvitaion()
    + hasTicket()
    + setTikcet(ticket)
    + minusAmount(amount)
    + plusAmount(amount)
}

class Invitation {
    - when
}
class Ticket {
    - fee
    + getFee()
}

class TicketSeller {
    + getTicketOffice()
}

class TicketOffice {
    - amount
    + getTikcet()
    + minusAmount(amount)
    + plusAmount(amount)
}

@enduml